[improve][client] Make authorization server metadata path configurable in AuthenticationOAuth2 (#25052)
Co-authored-by: hoguni <hoguni@lycorp.co.jp>